--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-document-picker')
+    compile project(':react-native-pdf')
+    compile project(':rn-fetch-blob')
     compile project(':react-native-image-picker')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
