--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "16.5.0",
     "react-native": "0.57.0",
-    "react-native-image-picker": "^0.26.10"
+    "react-native-document-picker": "^2.1.0",
+    "react-native-image-picker": "^0.26.10",
+    "react-native-pdf": "^5.0.5",
+    "rn-fetch-blob": "^0.10.13"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
